feat: add to pypi with name sgex

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = sketch-grammar-explorer
+name = sgex
 version = 0.2.0
 author = Loryn Isaacs
 author_email = 50170623+engisalor@users.noreply.github.com
-description = An API wrapper for Sketch Engine
+description = Sketch Grammar Explorer (Sketch Engine API wrapper)
 keywords = 
     sketch engine
     api wrapper
