fix: implement pre-commit, release-please

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = sgex
-version = 0.5.5
+version = 0.5.5  # x-release-please-version
 author = Loryn Isaacs
 author_email = 50170623+engisalor@users.noreply.github.com
 description = Sketch Grammar Explorer (Sketch Engine API wrapper)
-keywords = 
+keywords =
     sketch engine
     api wrapper
     corpus linguistics
@@ -25,6 +25,6 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.7
-install_requires = 
+install_requires =
     pyyaml
     requests
