docs: release-please extra-files

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,4 +13,7 @@ jobs:
           release-type: python
           package-name: release-please-action
           bump-minor-pre-major: true
-          extra-files: sgex/_version.py CITATION.cff setup.cfg
+          extra-files: |
+            sgex/_version.py
+            CITATION.cff
+            setup.cfg
