docs: update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,38 @@
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
-cryptography==37.0.2
-idna==3.3
-importlib-metadata==4.11.4
+appdirs==1.4.4
+attrs==22.2.0
+cattrs==22.2.0
+certifi==2022.12.7
+cffi==1.15.1
+cfgv==3.3.1
+charset-normalizer==3.0.1
+cryptography==39.0.1
+defusedxml==0.7.1
+distlib==0.3.6
+et-xmlfile==1.1.0
+filelock==3.9.0
+identify==2.5.18
+idna==3.4
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+jaraco.classes==3.2.3
 jeepney==0.8.0
-keyring==23.5.0
-numpy==1.22.4
-pandas==1.4.2
+keyring==23.13.1
+more-itertools==9.0.0
+nodeenv==1.7.0
+numpy==1.24.2
+openpyxl==3.1.1
+pandas==1.5.3
+platformdirs==3.0.0
+pre-commit==3.0.4
 pycparser==2.21
 python-dateutil==2.8.2
-pytz==2022.1
+pytz==2022.7.1
 PyYAML==6.0
-requests==2.27.1
-SecretStorage==3.3.2
+requests==2.28.2
+requests-cache==0.9.8
+SecretStorage==3.3.3
 six==1.16.0
-urllib3==1.26.9
-zipp==3.8.0
+url-normalize==1.4.3
+urllib3==1.26.14
+virtualenv==20.19.0
+zipp==3.14.0
