fix: update config example, setup.cfg

--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
 noske:
-  server: http://localhost:10070/bonito/run.cgi
+  host: http://localhost:10070/bonito/run.cgi
   asynchronous: True
 ske:
   api_key: null
-  server: https://api.sketchengine.eu/bonito/run.cgi
+  host: https://api.sketchengine.eu/bonito/run.cgi
   username: username
-  wait: 
+  wait:
     0: 1
     2: 99
     5: 899
