--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,9 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
+    pandas
     pyyaml
     requests
+    requests-cache
