--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,18 @@
-appdirs==1.4.4
-attrs==22.2.0
-cattrs==22.2.0
-certifi==2022.12.7
-cffi==1.15.1
-cfgv==3.3.1
-charset-normalizer==3.0.1
-cryptography==39.0.1
-defusedxml==0.7.1
-distlib==0.3.6
-et-xmlfile==1.1.0
-filelock==3.9.0
-identify==2.5.18
+aiofiles==23.2.1
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+charset-normalizer==3.2.0
+frozenlist==1.4.0
 idna==3.4
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jeepney==0.8.0
-keyring==23.13.1
-more-itertools==9.0.0
-nodeenv==1.7.0
-numpy==1.24.2
-openpyxl==3.1.1
-pandas==1.5.3
-platformdirs==3.0.0
-pre-commit==3.0.4
-pycparser==2.21
+multidict==6.0.4
+numpy==1.26.0
+pandas==2.1.1
 python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
-requests==2.28.2
-requests-cache==0.9.8
-SecretStorage==3.3.3
+pytz==2023.3.post1
+PyYAML==6.0.1
+sgex==0.6.3
 six==1.16.0
-url-normalize==1.4.3
-urllib3==1.26.14
-virtualenv==20.19.0
-zipp==3.14.0
+tzdata==2023.3
+yarl==1.9.2
