--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 aiofiles==23.2.1
-aiohttp==3.9.0
+aiohttp==3.9.3
 aiosignal==1.3.1
-attrs==23.1.0
-frozenlist==1.4.0
-idna==3.4
-multidict==6.0.4
-numpy==1.26.2
-pandas==2.1.3
+attrs==23.2.0
+frozenlist==1.4.1
+idna==3.6
+multidict==6.0.5
+numpy==1.26.4
+pandas==2.2.0
 python-dateutil==2.8.2
-pytz==2023.3.post1
+pytz==2024.1
 PyYAML==6.0.1
 six==1.16.0
-tzdata==2023.3
-yarl==1.9.3
+tzdata==2023.4
+yarl==1.9.4
