--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 aiofiles==23.2.1
-aiohttp==3.9.3
+aiohttp==3.9.5
 aiosignal==1.3.1
 attrs==23.2.0
 frozenlist==1.4.1
-idna==3.6
+idna==3.7
 multidict==6.0.5
 numpy==1.26.4
-pandas==2.2.0
-python-dateutil==2.8.2
+pandas==2.2.2
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 six==1.16.0
-tzdata==2023.4
+tzdata==2024.1
 yarl==1.9.4
