--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-aiofiles==23.2.1
-aiohttp==3.9.5
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
-attrs==23.2.0
+attrs==24.2.0
 frozenlist==1.4.1
-idna==3.7
-multidict==6.0.5
-numpy==1.26.4
+idna==3.8
+multidict==6.1.0
+numpy==2.1.1
 pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-PyYAML==6.0.1
+PyYAML==6.0.2
 six==1.16.0
 tzdata==2024.1
-yarl==1.9.4
+yarl==1.11.1
